route to delete api keys
